Submitted new assignment and removed old files

--- a/Assignments.html
+++ b/Assignments.html
@@ -6,7 +6,7 @@
     <meta name="description" content="">
     <meta name="author" content="">
 
-    <title>Becky's Homepage</title>
+    <title>Becky's Assignments</title>
 
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/css/bootstrap.min.css">
 	
@@ -14,60 +14,60 @@
 
   <body>
 
-    <nav class="navbar navbar-inverse navbar-fixed-top">
+    <nav class="navbar navbar-inverse navbar-fixed-top" >
       <div class="container">
         <div class="navbar-header">
           <button class="navbar-toggle collapsed" aria-expanded="false" aria-controls="navbar" type="button" data-toggle="collapse" data-target="#navbar">
             <span class="sr-only">Toggle navigation</span>
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
-            <span class="icon-bar"></span>
+            
           </button>
           <a class="navbar-brand" href="Index.html">Homepage</a>
 		  <a class="navbar-brand" href="Assignments.html">Assignments</a>
 		  <a class="navbar-brand" href="ContactMe.html">Contact Me</a>
         </div>
-        <div class="navbar-collapse collapse" id="navbar">
-          <form class="navbar-form navbar-right">
-            <div class="form-group">
-              <input class="form-control" type="text" placeholder="Email">
-            </div>
-            <div class="form-group">
-              <input class="form-control" type="password" placeholder="Password">
-            </div>
-            <button class="btn btn-success" type="submit">Sign in</button>
-          </form>
+        
         </div><!--/.navbar-collapse -->
       </div>
     </nav>
-	
 
-    <!-- Main jumbotron for a primary marketing message or call to action -->
-    <div class="jumbotron">
-      <div class="container">
-        <h1>Welcome to my Site!</h1>
-        <p>This is where I am going to post my assignments from now on.</p>
-        <!--<p><a class="btn btn-primary btn-lg" role="button" href="#">Learn more »</a></p> -->
-      </div>
-    </div>
+    <h1 style="padding-left: 100; padding-right:100; padding-top: 100"> Assignments Page </h1>
 
-    <div class="container">
+    <div class="container" style="padding-top: 30">
       <!-- Example row of columns -->
       <div class="row">
         <div class="col-md-4">
-          <h2>Heading</h2>
+          <h2>Assignment 1</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" role="button" href="#">View details »</a></p>
+          <p><a class="btn btn-default" role="button" href="#">Go to »</a></p>
         </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
+          <h2>Assignment 2</h2>
           <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
-          <p><a class="btn btn-default" role="button" href="#">View details »</a></p>
+          <p><a class="btn btn-default" role="button" href="#">Go to »</a></p>
        </div>
         <div class="col-md-4">
-          <h2>Heading</h2>
+          <h2>Assignment 3</h2>
           <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
-          <p><a class="btn btn-default" role="button" href="#">View details »</a></p>
+          <p><a class="btn btn-default" role="button" href="#">Go to »</a></p>
+        </div>
+      </div>
+	  <div class="row">
+        <div class="col-md-4">
+          <h2>Assignment 4</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-default" role="button" href="#">Go to »</a></p>
+        </div>
+        <div class="col-md-4">
+          <h2>Assignment 5</h2>
+          <p>Donec id elit non mi porta gravida at eget metus. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus. Etiam porta sem malesuada magna mollis euismod. Donec sed odio dui. </p>
+          <p><a class="btn btn-default" role="button" href="#">Go to »</a></p>
+       </div>
+        <div class="col-md-4">
+          <h2>Assignment 6</h2>
+          <p>Donec sed odio dui. Cras justo odio, dapibus ac facilisis in, egestas eget quam. Vestibulum id ligula porta felis euismod semper. Fusce dapibus, tellus ac cursus commodo, tortor mauris condimentum nibh, ut fermentum massa justo sit amet risus.</p>
+          <p><a class="btn btn-default" role="button" href="#">Go to »</a></p>
         </div>
       </div>
 
