--- a/ContactMe.Html
+++ b/ContactMe.Html
@@ -60,6 +60,6 @@
     </div> <!-- /container -->
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
-    
-
-</body></html>
+   
+</body>
+</html>
