--- a/index.html
+++ b/index.html
@@ -80,5 +80,5 @@
 
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.3.2/js/bootstrap.min.js"></script>
     
-
-</body></html>
+</body>
+</html>
