--- a/assignments.html
+++ b/assignments.html
@@ -22,11 +22,13 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
             
+			
           </button>
-          <a class="navbar-brand" href="Index.html">Homepage</a>
-		  <a class="navbar-brand" href="Assignments.html">Assignments</a>
-		  <a class="navbar-brand" href="ContactMe.html">Contact Me</a>
+          <a class="navbar-brand" href="index.html">Homepage</a>
+		  <a class="navbar-brand" href="assignments.html">Assignments</a>
+		  <a class="navbar-brand" href="contactme.html">Contact Me</a>
         </div>
+		
         
         </div><!--/.navbar-collapse -->
       </div>
