fixed file names

--- a/index.html
+++ b/index.html
@@ -23,9 +23,9 @@
             <span class="icon-bar"></span>
             <span class="icon-bar"></span>
           </button>
-          <a class="navbar-brand" href="Index.html">Homepage</a>
-		  <a class="navbar-brand" href="Assignments.html">Assignments</a>
-		  <a class="navbar-brand" href="ContactMe.html">Contact Me</a>
+          <a class="navbar-brand" href="index.html">Homepage</a>
+		  <a class="navbar-brand" href="assignments.html">Assignments</a>
+		  <a class="navbar-brand" href="contactme.html">Contact Me</a>
         </div>
         <div class="navbar-collapse collapse" id="navbar">
           <form class="navbar-form navbar-right">
